Contrast fix for Post-MVP

--- a/app/assets/sass/post-mvp-fixes/components/_daqi.scss
+++ b/app/assets/sass/post-mvp-fixes/components/_daqi.scss
@@ -1,21 +1,26 @@
-
-
 .daqi-labels {
   display: flex;
   white-space: nowrap;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
 .daqi-bar {
   display: flex;
   height: govuk-spacing(4);
   margin-bottom: govuk-spacing(2);
+  border: 1px solid transparent;
 }
 
 .daqi-bar-segment {
   width: 10%;
   height: 100%;
   margin-right: 2px;
+  border-right: 1px solid transparent;
+
+  &:last-child {
+    border-right: none;
+    margin-right: 0;
+  }
 }
 
 .daqi-band {
@@ -24,91 +29,39 @@
   width: 30%;
   vertical-align: top;
   text-align: left;
-  border-right: 3px solid white;
+
+  &:last-child, &:nth-child(3) {
+    width: 20%;
+  }
 }
-
-
-.daqi-band:last-child {
-  width: 20%;
-}
-
-.daqi-band:nth-child(3) {
-  width: 20%;
-}
-
 
 .daqi-selected {
-    font-weight: bold; 
- }
-
-.daqi-0 {
-  background-color: $daqi-colour-0;
-  color: govuk-colour("black");
+  svg {
+    display: none;
+  }
+  @media (forced-colors: active) {
+    border-right: 0px;
+    svg {
+      display: block;
+    }
+  }
 }
-
-.daqi-1 {
-  background-color: $daqi-colour-1;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-  
-.daqi-2 {
-  background-color: $daqi-colour-2;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-  
-.daqi-3 {
-  background-color: $daqi-colour-3;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-  
-.daqi-4 {
-  background-color: $daqi-colour-4;
-  color: govuk-colour("black");
-  font-weight: bold; 
-}
-  
-.daqi-5 {
-  background-color: $daqi-colour-5;
-  color: govuk-colour("black");
-  font-weight: bold; 
-}
-  
-.daqi-6 {
-  background-color: $daqi-colour-6;
-  color: govuk-colour("black");
-  font-weight: bold; 
-}
-  
-.daqi-7 {
-  background-color: $daqi-colour-7;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-  
-.daqi-8 {
-  background-color: $daqi-colour-8;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-  
-.daqi-9 {
-  background-color: $daqi-colour-9;
-  color: govuk-colour("white");
-  font-weight: bold; 
- }
-  
-.daqi-10 {
-  background-color: $daqi-colour-10;
-  color: govuk-colour("white");
-  font-weight: bold; 
-}
-
 
 @for $i from 0 through 10 {
   .daqi-#{$i} {
-    text-align: center;
+    background-color: map-get((
+      0: $daqi-colour-0,
+      1: $daqi-colour-1,
+      2: $daqi-colour-2,
+      3: $daqi-colour-3,
+      4: $daqi-colour-4,
+      5: $daqi-colour-5,
+      6: $daqi-colour-6,
+      7: $daqi-colour-7,
+      8: $daqi-colour-8,
+      9: $daqi-colour-9,
+      10: $daqi-colour-10
+    ), $i); 
+    color: if($i == 0 or $i == 4 or $i == 5 or $i == 6, govuk-colour("black"), govuk-colour("white"));
   }
 }
